(stabilization fixes 30-09-2025)